--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 
 .header h1 {
     display:inline-block;
+    flex-wrap: wrap;
     font-size: 45px;
     color: green;
 }
@@ -35,9 +36,15 @@ body {
 }
 
 .content {
-    width: 100%;
-    display: inline-block;
-    margin-left: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 100vh;
+    margin: 0 auto;
+    border-style: solid;
+    border-width: 2px;   
 }
 
 .main-boxes {
@@ -47,8 +54,17 @@ body {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     background-color: greenyellow;
     color: black;
+    flex: 1 0 200px;
+    padding: 10px;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
 }
 
+.about me {
+    display: flex;
+    justify-content: space-between;
+}
 .main-boxes h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -65,24 +81,20 @@ body {
     font-size: 30px;
 }
 
-.footer p {
-    font-size: 10px;
+.footer nav ul {
+
 }
 
 @media screen and (max-width: 992px) {
     .header {
         background: lightgreen;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .content {
-        background-color: lightgoldenrodyellow;
+        flex-direction: column;
     }
 }
 
 @media screen and (max-width: 576px) {
     .main-boxes {
         background-color: burlywood;
+        flex-direction: column;
     }
 }
