--- a/style.css
+++ b/style.css
@@ -9,27 +9,51 @@ body {
 }
 
 .header {
-    padding: 20px;
+    padding: 40px;
+    width: 100%;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-color: bisque;
+    background: linear-gradient(bisque, darkseagreen);
     color: darkslategray;
-    
-
+    flex: wrap;
 }
 
 .header h1 {
     display: inline-block;
     font-size: 50px;
+    flex-wrap: wrap;
 }
 
 .header nav {
     padding-top: 15px;
     float: right;
     font-size: 25px;
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+
+}
+
+.header nav ul {
+    display: flex;
 }
 
 .header nav ul li {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    flex: wrap;
+    margin-right: 10px;
+}
+
+.header nav ul li a:hover {
+    color: aquamarine;
+}
+
+.pic {
+    height: 50%;
+    width: 50%;
+    border-radius: 50%;
+    display: flex;
+    flex: wrap;
 }
 
 .profile-pic {
@@ -37,7 +61,7 @@ body {
     flex-flow: column;
     justify-content: center;
     align-items: center;
-     
+    flex-wrap: wrap;
 }
 
 .profile-pic h2 {
@@ -59,29 +83,84 @@ body {
     color: darkslategray;
 }
 
+.main-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    height: 100px;
+    width: 100%; 
+    padding: 10px;
+    text-align: center;
+    border-style: dashed;
+    border-width: 1px;
+    font-size: 25px;
+}
+
+.main-box a {
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+}
+
+.main-box a:hover {
+    color: aquamarine;
+}
+
 .box {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content:space-around;
     padding: 2%;
-
 }
 
-.main-boxes {
+.imageOne,.imageTwo,.imageThree {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    min-height: 100%;
     padding: 2%;
     color: darkslategray;
     outline: 2px solid lightgoldenrodyellow;
     outline-offset: -2px;
     transition: all 0.5s ease-in-out;
-    
 }
 
-@media screen (max-width: 800px) {
-    .profile-pic {
+.imageOne a:hover, .imageTwo a:hover, .imageThree a:hover {
+    color: aquamarine;
+}
+
+
+
+.footer {
+    padding: 60px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background: linear-gradient(darkseagreen, bisque);
+    color: darkslategray;
+    flex-wrap: wrap;
+}
+
+.footer h2 {
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer nav {
+    padding-top: 5px;
+    float:unset;
+    justify-content: center;
+    font-size: 20px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer nav a:hover {
+    color:aquamarine;
+}
+
+@media screen and (max-width: 200px) {
+    header .profile-pic {
         flex-direction: column;
     }
 }
