--- a/style.css
+++ b/style.css
@@ -83,24 +83,36 @@ body {
     color: darkslategray;
 }
 
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .main-box {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 10px;
-    height: 100px;
-    width: 100%; 
+    height: 300px;
+    width: 30%; 
+    margin: 1%;
     padding: 10px;
     text-align: center;
     border-style: dashed;
     border-width: 1px;
     font-size: 25px;
+    color: darkslategray;
+}
+
+.main-box {
+    background-color: url;
 }
 
 .main-box a {
     text-decoration: none;
-    color: black;
+    color: darkslategray;
     cursor: pointer;
 }
 
@@ -113,17 +125,19 @@ body {
     flex-wrap: wrap;
     justify-content:space-around;
     padding: 2%;
+    gap: 50px;
 }
 
 .imageOne,.imageTwo,.imageThree {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     padding: 2%;
     color: darkslategray;
     outline: 2px solid lightgoldenrodyellow;
     outline-offset: -2px;
     transition: all 0.5s ease-in-out;
+    gap: 10px;
 }
 
 .imageOne a:hover, .imageTwo a:hover, .imageThree a:hover {
